# DocumentScrapper

./: .gitignore  README.md  pyproject.toml
agents/: doc_agent.py
api/: main.py  middleware.py
config/: document_classes.py
crawlers/: firecrawl_client.py
tests/: test_api.py
utils/: document_processor.py  file_validator.py  logger.py  parallel_downloader.py  report_generator.py
